# xGUI-Pro

./: .gitignore  CMakeLists.txt  README.md
debian/: control  copyright  rules
flatpak/: cn.fmsoft.xGUIPro.yml
source/: CMakeLists.txt
source/cmake/: FindCairoHBD.cmake  FindCairoHbd.cmake  FindDNSSD.cmake  FindDOMRuler.cmake  FindGLIB.cmake  FindMiniGUI.cmake  FindNcurses.cmake  FindPurC.cmake  FindWebKit2Gtk.cmake  FindWebKit2HBD.cmake  FindWebKit2Hbd.cmake  GlobalCCache.cmake  GlobalCommon.cmake  GlobalCompilerFlags.cmake  GlobalDist.cmake  GlobalFS.cmake  GlobalFeatures.cmake  GlobalFindPackage.cmake  GlobalMacros.cmake  GlobalPackaging.cmake  OptionsAppleWin.cmake  OptionsCommon.cmake  OptionsGTK.cmake  OptionsLinux.cmake  OptionsMSVC.cmake  OptionsMac.cmake  OptionsMiniGUI.cmake  OptionsWin.cmake  OptionsWindows.cmake
source/lib/: CMakeLists.txt  MyMacros.cmake  PlatformGTK.cmake  PlatformMac.cmake  config.h  xguipro_features.h.in  xguipro_version.h.in
source/lib/utils/: avl-cmp.h  avl.c  avl.h  base64-alloc.c  base64.h  gslist.c  gslist.h  hvml-uri.c  hvml-uri.h  kvlist.c  kvlist.h  list.h  load-asset.c  load-asset.h  misc.c  misc.h  sha1.h  sorted-array.c  sorted-array.h
source/tools/aur/: README.md
source/tools/aur/xguipro/: PKGBUILD
source/tools/aur/xguipro-git/: PKGBUILD
source/tools/debian/: changelog
source/wtf/: CMakeLists.txt
source/wtf/wtf/: CMakeLists.txt  Platform.h  PlatformLegacy.h  PlatformRegisters.h
